header nav alignment fix

--- a/src/styles/page/header.less
+++ b/src/styles/page/header.less
@@ -19,6 +19,7 @@
       display: block;
       padding: 0.5rem;
       transition: background .1s ease-in-out;
+      width: 135px;
       svg {
         height: 45px;
         .respond-to-mobile-large({
@@ -84,8 +85,9 @@
 
     .nav-right {
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
+      width: 135px;
       a {
         padding: 1rem 0.5rem;
       }
